--- a/utils/data_generator.ipynb
+++ b/utils/data_generator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,10 +146,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# create a method to insert meal benefits into the database\n",
+    "def insert_beneficios_refeicao():\n",
+    "    fake = faker.Faker('pt_BR')\n",
+    "    data = []\n",
+    "    for i in range(10000):\n",
+    "        data.append({\n",
+    "            'codigo_funcionario': i,\n",
+    "            'codigo_empresa': fake.random_int(min=1, max=8),\n",
+    "            'codigo_beneficio': fake.random_int(min=1, max=2),\n",
+    "            'valor_beneficio': fake.random_int(min=500, max=1050),\n",
+    "        })\n",
+    "    df = pd.DataFrame(data)\n",
+    "    df.to_sql('st_beneficio_refeicao', con=engine, if_exists='append', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "insert_beneficios_refeicao()"
+   ]
   }
  ],
  "metadata": {
